# Browser-AI-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
browser_agent/: agent.py  config.py  main.py
browser_agent/browser/: manager.py  sensitive.py
browser_agent/browser/enums/: action_types.py  roles.py
browser_agent/browser/executor/: actions.py  exceptions.py  snapshot.py  validator.py
browser_agent/browser/executor/js/: snapshot_extractor.js
browser_agent/browser/llm/: client.py  prompts.py  snapshot_mapper.py
browser_agent/logger/: console.py
browser_agent/models/: actions.py  actions_models.py  agent.py  agent_models.py  browser.py  browser_models.py
